2007-07-18  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac: bumped version for 0.1.9 iteration

2007-07-18  Calvin Gaisford <calvinrg@gmail.com> 

	* NEWS: Updated for new release 0.1.8

2007-07-17  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Conversation.cs: added video stop message

2007-07-17  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ChatWindow.cs: updated the window size

2007-07-17  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/MessagesView.cs: Fixed scrolling (actually Boyd did this)

2007-07-17  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mdp: Removed unused references
	* Banter/Account.cs: removed long debug messages
	* Banter/ChatWindow.cs, Banter/GroupWindow.cs: fixed up icon
	* Banter/PersonManager.cs: removed too many debug messages
	* Banter/PersonView.cs: removed debug messages

2007-07-17  Calvin Gaisford <calvinrg@gmail.com> 

	* test, test/TelepathyTest, test/TelepathyTest/AssemblyInfo.cs,
	  test/TelepathyTest/TelepathyTest.usertasks,
	  test/TelepathyTest/Main.cs,
	  test/TelepathyTest/TelepathyTest.userprefs,
	  test/TelepathyTest/TelepathyTest.mdp, test/StreamObjectTest,
	  test/StreamObjectTest/AssemblyInfo.cs,
	  test/StreamObjectTest/MainWindow.cs,
	  test/StreamObjectTest/StreamObjectTest.mdp,
	  test/StreamObjectTest/VideoWindow.cs,
	  test/StreamObjectTest/gtk-gui,
	  test/StreamObjectTest/gtk-gui/MainWindow.cs,
	  test/StreamObjectTest/gtk-gui/generated.cs,
	  test/StreamObjectTest/gtk-gui/gui.stetic,
	  test/StreamObjectTest/Main.cs, test/StreamObjectTest/ChatWindow.cs,
	  tapioca-sharp, tapioca-sharp/configure.ac.old,
	  tapioca-sharp/tapioca, tapioca-sharp/tapioca/ConnectionGroup.cs,
	  tapioca-sharp/tapioca/TextChannel.cs,
	  tapioca-sharp/tapioca/StreamAudio.cs,
	  tapioca-sharp/tapioca/Avatar.cs,
	  tapioca-sharp/tapioca/ChannelTarget.cs,
	  tapioca-sharp/tapioca/TextChannelMessage.cs,
	  tapioca-sharp/tapioca/StreamVideo.cs,
	  tapioca-sharp/tapioca/StreamObject.cs,