@@ -81,7 +81,6 @@ ASSEMBLIES =  \
 	$(GLIB_SHARP_20_LIBS) \
 	$(GNOME_SHARP_20_LIBS) \
 	$(GTK_DOTNET_20_LIBS) \
-	$(EVOLUTION_SHARP_LIBS) \
 	$(TELEPATHY_SHARP_LIBS) \
 	$(NOTIFY_SHARP_LIBS) 
 
